2001-07-10  Kai Lahmann <kl@linuxfaqs.de>

	* keyboard-properties.desktop: Fixed wrong binary name

2001-07-05  Bradford Hovinen  <hovinen@ximian.com>

	* prefs-widget.c (set_scale): Add appropriate casts

2000-12-26  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* keyboard-properties.glade: re-did the UI a bit

2000-10-08  Bradford Hovinen  <hovinen@helixcode.com>

	* Makefile.am (EXTRA_DIST): Add translation file

2000-09-12  Bradford Hovinen  <hovinen@helixcode.com>

	* preferences.c (preferences_clone): Added in missing code to copy
	preferences over
