@@ -8,3 +8,4 @@ Makefile.in
 keyboard-properties
 keyboard-properties-capplet
 keyboard-properties.desktop
+keyboard-properties.desktop.in
